# Synthaia-public-version

./: .env.example  .gitignore  AUDIO_SETUP.md  Aptfile  Dockerfile  QUICK_START_WAV.md  README.md  WAV_EXPORT_IMPLEMENTATION.md  pyproject.toml  test_midi_lyrics.py  test_piper.py  test_pysinsy.py  test_pysinsy_vocals.py  test_reaper.rpp  test_wav_export.py
api/: __init__.py  models.py  routes.py  server.py
frontend/: ENV_SETUP.md  package-lock.json  package.json
frontend/src/: App.jsx  config.js
frontend/src/components/: ConnectionTest.jsx  ErrorAlert.jsx  LoadingSpinner.jsx  MidiPlayer.jsx  ProgressIndicator.jsx
frontend/src/components/Layout/: Footer.jsx  Header.jsx  Layout.jsx
frontend/src/services/: README.md  websocket.js
prompts/lyrics/: seed.md  song_lyrics.md
prompts/midi/: continuation.md  drums.md  harmonize.md  melody.md  vocals.md
scripts/: __init__.py  create_full_song.py
scripts/audio/: __init__.py  audio_config.py  instrument_mapper.py  render_midi.py  render_track.py
scripts/lyrics/: __init__.py  generate_song_lyrics.py  idea_seed_llm.py  idea_to_lyrics.py
scripts/midi/: __init__.py  arrange_song.py  continue_melody.py  generate_drums.py  generate_melody.py  generate_vocal_melody.py  harmonize_melody.py
scripts/utils/: __init__.py  cfg.py  llm_client.py  midi_utils.py  musicxml_utils.py  synthv_automation.py  synthv_client.py
soundfonts/: README.md
